--- a/src/Components/Web/Launchpad/swiper_web.css
+++ b/src/Components/Web/Launchpad/swiper_web.css
@@ -1,5 +1,5 @@
 .App{
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     overflow-x: hidden;
     overscroll-behavior: contain;
@@ -9,16 +9,18 @@
     display: flex;
     justify-content: center;
     align-items: right;
-    left: 0%;
+    right: 0%;
+    z-index: 6;
   }  
 
 .row{
     position: relative;
+    margin-right: 35vw;
   }
   
 .container{
   position: absolute;
-  width: 50vw;
+  width: 100vw;
   height: 90vh;
   overflow: hidden;
   background: transparent;
@@ -26,15 +28,41 @@
   top:5vh;
 }
 
-@media screen and (min-width:1229px) and (max-width: 1440px){
+.card {
+  transform: scale(0.9);
+}
+
+@media screen and (min-width:1000px) and (max-width: 1300px){
   .App{
-    z-index: 5;
-    top: 100px;
-    width: 60vh;
-    height: 90vh;
-  }
-  .container{
+    z-index: 6;
+    top: 0;
+    width: 100%;
     height: 100vh;
-    top: 5vh;
+    left: 8vw;
+    margin: auto;
+    /* right: -15%; */
+  }
+
+  .row{
+    margin-right: 23vw;
+  }
+
+  .container{
+    height: 100%;
+    top: 0;
+  }
+
+  .card {
+    transform: scale(0.85);
+    transform-origin: 0;
+  }
+
+  .background{
+    height: 58%;
+    bottom: 91vh;
+  }
+
+  .navCircles{
+    left: 15%
   }
 }
