--- a/src/Components/Web/Launchpad/swiper_web.css
+++ b/src/Components/Web/Launchpad/swiper_web.css
@@ -40,6 +40,7 @@
     height: 100vh;
     left: 8vw;
     margin: auto;
+    border: 1px solid green
     /* right: -15%; */
   }
 
@@ -53,16 +54,22 @@
   }
 
   .card {
-    transform: scale(0.85);
+    transform: scale(0.8);
     transform-origin: 0;
   }
 
   .background{
-    height: 58%;
-    bottom: 91vh;
+    height: 65%;
+    /* bottom: 91vh; */
   }
 
   .navCircles{
     left: 15%
+  }
+}
+
+@media screen and (min-height:600px) and (max-height: 800px){
+  .background{
+    border: 1px solid red;
   }
 }
