--- a/src/Components/Web/Launchpad/swiper_web.css
+++ b/src/Components/Web/Launchpad/swiper_web.css
@@ -67,12 +67,40 @@
 
   .ImgContainer{
     position: relative;
-    right: 3%;
-    width: 60%;
+    right: 6%;
+    width: 100%;
     height:auto;
   }
 }
 
-@media screen and (min-height:400px) and (max-height: 870px){
+@media screen and (min-height:850px) and (max-height: 900px){
+  .image{ 
+    left: 15%;
+    width: 550px;
+    height: 550px;
+  }
+}
 
+@media screen and (min-height:750px) and (max-height: 849px){
+  .image{ 
+    left: 17%;
+    width: 450px;
+    height: 450px;
+  }
+}
+
+@media screen and (min-height:650px) and (max-height: 749px){
+  .image{ 
+    left: 23%;
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media screen and (min-height:550px) and (max-height: 649px){
+  .image{ 
+    left: 26%;
+    width: 250px;
+    height: 250px;
+  }
 }
