--- a/src/Components/Web/Launchpad/swiper_web.css
+++ b/src/Components/Web/Launchpad/swiper_web.css
@@ -21,7 +21,7 @@
 .container{
   position: absolute;
   width: 100vw;
-  height: 90vh;
+  height: 100%;
   overflow: hidden;
   background: transparent;
   border: '1px solid white';
@@ -52,7 +52,7 @@
   }
 
   .card {
-    transform: scale(0.8);
+    transform: scale(0.9);
     transform-origin: 0;
   }
 
@@ -81,26 +81,26 @@
   }
 }
 
-@media screen and (min-height:750px) and (max-height: 849px){
+@media screen and (min-height:780px) and (max-height: 849px){
   .image{ 
-    left: 17%;
-    width: 450px;
-    height: 450px;
+    left: 15%;
+    width: 530px;
+    height: 530px;
   }
 }
 
-@media screen and (min-height:650px) and (max-height: 749px){
+@media screen and (min-height:650px) and (max-height: 779px){
   .image{ 
     left: 23%;
-    width: 350px;
-    height: 350px;
+    width: 480px;
+    height: 480px;
   }
 }
 
 @media screen and (min-height:550px) and (max-height: 649px){
   .image{ 
     left: 26%;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
   }
 }
